# Ivy

./: .gitignore  README.md  UV_GUIDE.md  config.py  config_example.py  main.py  popup_handler.py  pyproject.toml  test_selectors.py  video_automator.py  window_manager.py
